added authentification and authorization